# max-heal-py

./: .gitignore  README.md  pyproject-pypi.toml  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/: example_basic.py  example_flake_analyzer.py  example_sync_pom.py  example_v2.py
src/: __init__.py  config.py  dom_snapshot.py  factory.py  flake_analyzer.py  flaky_guard.py  heal_engine.py  llm_client.py  maxheal_page.py  protocols.py  strategies.py
src/integrations/: __init__.py  allure.py
tests/: conftest.py  test_context_isolation.py  test_flaky_guard.py  test_heal_engine.py  test_max_step.py
